<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">神农通Plus</string>
    <string name="version">0.1Bate</string>
    <string name="openDrawerContentDescRes">Navigation View</string>
    <string name="closeDrawerContentDescRes">Navigation View Closed</string>

    <string name="title_pick_photo">照片</string>
    <string name="title_pick_place">位置</string>
    <string name="title_about">关于</string>
    <string name="title_settings">设置</string>

    <string name="place_autocomplete_hint">请输入你要搜索的位置</string>
    <string name="place_selected_place">最近一次搜索的位置:</string>
    <string name="place_get_current_place">自动获取当前位置</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->

    <string name="about_introduce">西北农林科技大学农业科技信息服务平台。\n更多功能请访问：http://agrinfo.nwsuaf.edu.cn</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_share_text">神农通Plus</string>
    <string name="about_app_name_with_introduce">神农通Plus</string>
    <string name="about_developers">关于我</string>
    <string name="about_developer_description"> </string>
    <string name="about_open_source_lis">感谢开源</string>
    <string name="about_thanks_to">特别鸣谢</string>
    <string name="about_thanks_to_detail">感谢</string>
    <string name="about_thank_email">403918995@qq.com</string>>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">com.orhanobut:logger:1.10\ncom.jakewharton:butterknife:7.0.1\ncom.soundcloud.android:android-crop:1.0.0@aar\ncom.loopj.android:android-async-http:1.4.8\ncom.github.bumptech.glide:glide:3.6.1\nme.imid.swipebacklayout.lib:library:1.0.0</string>

    <string name="settings_version">版本更新</string>
    <string name="settings_version_code">版本:0.9.4</string>
    <string name="settings_auto_update">自动更新应用</string>
    <string name="settings_auto_push">推送精选内容</string>
    <string name="settings_general_settings">常规</string>
    <string name="settings_push_settings">推送</string>

    <string name="search_hint">搜索</string>
    <string name="search_result_title">搜索:</string>

    <string name="menu_action_feedback">注销</string>
    <string name="men_action_refresh">刷新</string>
    <string name="men_action_read_mode">夜间模式</string>
    <string name="menu_action_pick_photo">选取</string>

    <string name="snack_exit_once_more">再按一次退出神农通Plus</string>
    <string name="snack_rest_over_to_you">这是一个测试</string>
    <string name="snack_network_error">加载失败，请重试</string>

    <string name="drawer_item_home">首页</string>
    <string name="drawer_item_collection">我的收藏</string>
    <string name="drawer_item_read">浏览历史</string>
    <string name="drawer_item_additional">附加功能</string>
    <string name="drawer_item_pick_place">位置选取</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_about">关于</string>
    <string name="drawer_item_ask">智能客服</string>
    <string name="drawer_item_video">专家视频系统</string>
    <string name="login_error_emtpy">用户名或密码不能为空</string>
    <string name="login_error_login">用户名或密码错误</string>


    <!-- 农业信息模块 -->
    <string name="action_addBase">添加示范站</string>
    <string name="action_deleteBase">删除示范站</string>
    <string name="action_refresh">刷新数据</string>
    <string name="action_addcamera">添加相机位置</string>
    <string name="action_delcamera">删除相机位置</string>

    <!-- 智能客服 -->

    <string name="action_settings">Settings</string>

    <drawable name="btn_login_normal">#0091EA</drawable>
    <drawable name="btn_login_pressed">#64A58E</drawable>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember">记住用户名和密码</string>
    <string name="username">用户名:</string>
    <string name="password">密   码:</string>
    <string name="confirmpassword">确认密码:</string>
    <string name="cancell">取消</string>
    <string name="receiveconfirmnumber">获取验证码</string>
    <string name="login_in">登入</string>
    <string name="ExpertAdvice">专家咨询</string>
    <string name="LiveClassroom">直播课堂</string>
    <string name="OnlineConference">在线会议</string>
    <string name="OfflineConsulting">离线咨询</string>
    <string name="expert">专家</string>
    <string name="Consultants">咨询者</string>
    <string name="EnteredWatch">进入观看</string>
    <string name="host">主持人</string>
    <string name="Participants">参与者</string>
    <string name="Waitinglist">排队等候列表</string>
    <string name="UsersAdvisory">咨询用户</string>
    <string name="StartConsulting">咨询开始</string>
    <string name="EndConsulting">咨询结束</string>
    <string name="disconnect">断开</string>
    <string name="professor">教授</string>
    <string name="RequestAnExpedited">申请加急</string>
    <string name="ThereInFrontoFYou">您前面还有：</string>
    <string name="ExpertInformation">专家信息</string>
    <string name="ExpertList">专家名录</string>
    <string name="online">（在线）</string>
    <string name="offline">（离线）</string>
    <string name="queueLine">排队人数:</string>
    <string name="OnlineClassroomList">在线课堂列表</string>
    <string name="title">题目：</string>
    <string name="Presenter">主讲人：</string>
    <string name="time">时间：</string>
    <string name="startmeeting">会议开始</string>
    <string name="Attendmeetings">参加会议</string>
    <string name="attendee">参会者</string>
    <string name="lookReplay">离线咨询-查看回复</string>
    <string name="expertReplay">离线咨询-专家回复</string>
    <string name="SendInquiry">发出咨询</string>
    <string name="submit">提交咨询信息</string>
    <string name="nothing">暂无视屏数据</string>
    <string name="duration">时长：</string>
    <string name="replay">回复</string>
    <string name="hint1">请输入咨询的问题的标题</string>
    <string name="hint2">请输入咨询的内容</string>
    <string name="hint3">请专家在此输入回复内容</string>
    <string name="serveArea">服务站点</string>
    <string name="title_activity_func_menu">FuncMenu</string>
    <string name="voiceVideoInteraction">音视频交互</string>
    <string name="textChat">文字聊天</string>
    <string name="alphaChannel">透明通道</string>
    <string name="fileTransfer">文件传输</string>
    <string name="lovalVideoRecord">本地录像</string>
    <string name="serverVideoRecord">服务器录像</string>
    <string name="photograph">视频抓拍</string>
    <string name="videoCall">呼叫中心</string>
    <string name="udpTrace">网络检测评估</string>
    <string name="config">设置</string>
    <string name="dialog_read_from_dir">Open from dir</string>
    <string name="title_activity_video_server">VideoServer</string>
    <string name="title_activity_test">TestActivity</string>

    //视频服务


    <string name="hello_world">Hello world!</string>
    <string name="login_pwd">Password</string>
    <string name="login_user">Username</string>
    <string name="login_doctor">&#160;&#160;&#160;农业专家</string>
    <string name="login_normal">&#160;&#160;&#160;普通用户</string>
    <string name="remember_text">&#160;&#160;&#160;记住用户名与密码</string>
    <string name="login_text">登 陆</string>
    <string name="begin_text">咨询开始</string>
    <string name="end_text">咨询结束</string>
    <string name="user_empty_text">用户名不能为空！</string>
    <string name="pwd_empty_text">密码不能为空！</string>
    <string name="onlinetalk_switch_voice_text">切换语音</string>
    <string name="onlinetalk_switch_cap_text">切换摄像头</string>
    <string name="doctor_title">专家咨询</string>
    <string name="list_title_info">站点列表</string>
    <string name="wait_title_text">专家信息</string>

    <string name="HelloTitle">"Hello AnyChat"</string>
    <string name="endCall1">结束咨询</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="str_account">账          号:</string>
    <string name="str_account_input_hint">请输入账号！</string>
    <string name="str_login">登录</string>
    <string name="str_isSavepass">记住用户名密码</string>
    <string name="login_progress">正在登陆，请稍后!</string>
    <string name="server_connect_error">服务器连接失败!</string>
    <string name="str_serverip">服务器地址: </string>
    <string name="str_serverport">服务器端口号: </string>
    <string name="str_appkey">app应用ID: </string>
    <string name="str_serveripinput">请输入服务器地址! </string>
    <string name="str_serverportinput">请输入服务器端口号!</string>
    <string name="str_againlogin">账号在异处登陆，请重新登录</string>
    <string name="str_login_failed">登录系统失败</string>
    <string name="str_enterroom_failed">进入房间失败</string>
    <string name="str_lggin_failed">登录失败</string>
    <string name="str_exit">退出</string>
    <string name="str_accept">接受</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_resume">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_pause">挂断</string>
    <string name="str_send">发送</string>
    <string name="str_call">呼叫</string>
    <string name="str_back">返回</string>
    <string name="str_menu">菜单</string>
    <string name="str_switchcamera">切换摄像头</string>
    <string name="str_setting">设置</string>
    <string name="str_save">保存修改</string>
    <string name="no_onlines">当前没有在线用户</string>
    <string name="str_returncode_bussiness">呼叫对象正忙，请稍后再试</string>
    <string name="str_returncode_offline">呼叫用户不在线</string>
    <string name="str_user_offline">目标用户离线</string>
    <string name="str_returncode_requestcancel">用户取消呼叫</string>
    <string name="str_returncode_requestrefuse">用户拒绝被呼叫</string>
    <string name="str_returncode_disconnect">对方网络异常</string>
    <string name="str_returncode_timeout">呼叫超时</string>
    <string name="sessioning_reqite">请求与您通话！</string>
    <string name="str_calling">呼叫成功，正在等待用户响应</string>
    <string name="session_end">会话已经挂断</string>
    <string name="str_targetwrong">不能呼叫自己！</string>
    <string name="str_endsession">是否想要结束当前通话</string>
    <string name="end_session">结束通话</string>
    <string name="str_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="str_serverlink_close">与服务器断开连接，错误代码是</string>
    <string name="str_exitresume">是否想要退出整个应用程序</string>
    <string name="str_msgchatlist">文字聊天消息列表</string>
    <string name="str_notifitcation">iCloudSoft正在运行中</string>
    <string name="str_dialog_title_protip">AnyChatCallCenter提示</string>
    <string name="BACKING_RUNING">AnyChatCallCenter正在后台运行</string>
    <string name="company_msg">广州佰锐网络科技有限公司  版权所有</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
