<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/drawer_item_additional">
            <menu>
                <item
                    android:id="@+id/nav_ask"
                    android:checked="false"
                    android:title="@string/drawer_item_ask"/>
                <item
                    android:id="@+id/nav_video"
                    android:checked="false"
                    android:title="@string/drawer_item_video"/>
                <item
                    android:id="@+id/nav_settings"
                    android:checked="false"
                    android:title="@string/drawer_item_settings"/>
                <item
                    android:id="@+id/nav_about"
                    android:checked="false"
                    android:title="@string/drawer_item_about"/>




            </menu>
        </item>
    </group>
</menu>