<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/onlinetalk_title_bg" >

        <ImageView
            android:id="@+id/user_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:src="@drawable/doctor_back" />

        <TextView
            android:id="@+id/user_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/user_back_icon"
            android:clickable="true"
            android:text="@string/doctor_title"
            android:textColor="#ff3a4446"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/Waitinglist"
        android:textColor="#000000"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_text"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/top_line" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/begin_bg"
            android:gravity="center"
            android:text="@string/begin_text"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/stop_bg"
            android:gravity="center"
            android:text="@string/end_text"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>